[Texlipse] TeXlipse-1.4.0